--- a/parts/4.md
+++ b/parts/4.md
@@ -1,4 +1,4 @@
-# resources
+# sites i love
 
 → huge collection of Xakep issues - [図書館.きく.コム](https://図書館.きく.コム/)  
 → i like to surf here - [neocities.org/browse](https://neocities.org/browse)  
