--- a/parts/1.md
+++ b/parts/1.md
@@ -4,4 +4,4 @@ this is my website. my name is serr and i do a bit of programming
 
 i was born in 2003, i'm currently a cybersecurity major at university
 
-`pronouns: he/him`
+**`pronouns: he/him`**
