--- a/parts/1.md
+++ b/parts/1.md
@@ -1,7 +1,9 @@
 # what is it?
 
-this is my website. my name is serr and i do a bit of programming
+this is my website. my name is **serr/laserattack** and i do a bit of programming
 
-i was born in 2003, i'm currently a cybersecurity major at university
+i was born in 2003, i'm currently a cybersecurity major at university 🤮
+
+there used to be posts on this site, but i wrote them too rarely, so i got rid of the section with them. now this is my profile site. the site code can be viewed here https://github.com/laserattack/luvit-profile-site
 
 **`pronouns: he/him`**
