--- a/parts/2.md
+++ b/parts/2.md
@@ -2,4 +2,4 @@
 
 programming is my lifestyle
 
-i love growing in all areas of programming - i am literally interested in everything: web development, low-level programming, formal grammars and a lot more
+i like to spend hours poking buttons: writing scripts to automate something, writing libraries that will never be useful, studying all sorts of marginal technologies (this site is written in Luvit runtime for Lua). in short, i usually program just to program
