--- a/parts/4.md
+++ b/parts/4.md
@@ -1,7 +1,8 @@
 # sites i love
 
-→ huge collection of Xakep issues - [図書館.きく.コム](https://図書館.きく.コム/)  
-→ i like to surf here - [neocities.org/browse](https://neocities.org/browse)  
-→ very atmospheric forum about black metal - [lycanthropia](https://www.lycanthropia.net/)  
-→ animated gif search from internet archive - [gifcities.org](https://gifcities.org/)  
-→ very cool design - [combatbaby.neocities.org](https://combatbaby.neocities.org/)  
+→ huge collection of Xakep issues -- [図書館.きく.コム](https://図書館.きく.コム/)  
+→ i like to surf here -- [neocities.org/browse](https://neocities.org/browse)  
+→ very atmospheric forum about black metal -- [lycanthropia](https://www.lycanthropia.net/)  
+→ animated gif search from internet archive -- [gifcities.org](https://gifcities.org/)  
+→ very cool design -- [combatbaby.neocities.org](https://combatbaby.neocities.org/)  
+→ online assembler and disassembler -- [shell-storm.org/online/Online-Assembler-and-Disassembler](https://shell-storm.org/online/Online-Assembler-and-Disassembler/)
