--- a/parts/3.md
+++ b/parts/3.md
@@ -2,6 +2,6 @@
 
 → **coffee**. i REALLY love coffee. almost any. and a lot of  
 → **movies and TV series** (especially TV series). i watch something almost every day  
-→ **true crime**. i'm obsessed with serial killer cases, mysterious disappearances, unsolved murders - all that dark stuff  
+→ **true crime**. i'm obsessed with serial killer cases, mysterious disappearances, unsolved murders -- all that dark stuff  
 → **russian underground rap** like Slava KPSS, Zamay, MB Packet, Ovsyankin etc.  
 → **simple and extensible code**. i think if your code is overly complex, it means you are doing something wrong. most things are simpler than they seem
